crates/alien-cloudformation/tests/generator/snapshots/generator__generator__network_tests__network_byo_vpc_aws.snap
---
source: crates/alien-cloudformation/tests/generator/network_tests.rs
expression: yaml
---
AWSTemplateFormatVersion: 2010-09-09
Description: byo vpc aws
Transform:
- AWS::LanguageExtensions
Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
    - Label:
        default: Registration
      Parameters:
      - ManagingRoleArn
      - ManagingAccountId
    - Label:
        default: Network
      Parameters:
      - NetworkMode
      - VpcCidr
      - AvailabilityZones
      - VpcId
      - PublicSubnetIds
      - PrivateSubnetIds
      - SecurityGroupIds
    - Label:
        default: Operations
      Parameters:
      - UpdatesMode
      - TelemetryMode
      - HeartbeatsMode
    ParameterLabels:
      AvailabilityZones:
        default: Availability zones
      HeartbeatsMode:
        default: Heartbeats
      ManagingAccountId:
        default: Image account ID
      ManagingRoleArn:
        default: Management role ARN
      NetworkMode:
        default: Network
      PrivateSubnetIds:
        default: Private subnet IDs
      PublicSubnetIds:
        default: Public subnet IDs
      SecurityGroupIds:
        default: Security group IDs
      TelemetryMode:
        default: Telemetry
      UpdatesMode:
        default: Updates
      VpcCidr:
        default: VPC CIDR
      VpcId:
        default: VPC ID
Parameters:
  ManagingRoleArn:
    Type: String
    Description: ARN of the management identity allowed to assume setup-created roles.
    Default: ''
  ManagingAccountId:
    Type: String
    Description: AWS account ID for the management account that hosts application container images.
    Default: ''
  NetworkMode:
    Type: String
    Description: Choose create-new for a managed VPC, use-existing for your VPC, or use-default for the account default VPC.
    Default: use-existing
    AllowedValues:
    - create-new
    - use-existing
    - use-default
  VpcCidr:
    Type: String
    Description: Only used with create-new. CIDR for the new VPC; leave unset for the generated default.
    Default: ''
  AvailabilityZones:
    Type: Number
    Description: Only used with create-new. Number of availability zones for the new VPC.
    Default: 2
    AllowedValues:
    - 1
    - 2
    - 3
  VpcId:
    Type: String
    Description: Only used with use-existing. Existing VPC ID.
    Default: vpc-0123456789abcdef0
  PublicSubnetIds:
    Type: CommaDelimitedList
    Description: Only used with use-existing. Existing public subnet IDs.
    Default: subnet-public-a,subnet-public-b
  PrivateSubnetIds:
    Type: CommaDelimitedList
    Description: Only used with use-existing. Existing private subnet IDs.
    Default: subnet-private-a,subnet-private-b
  SecurityGroupIds:
    Type: CommaDelimitedList
    Description: Only used with use-existing. Existing security group IDs.
    Default: sg-0123456789abcdef0
  EndpointAccess:
    Type: String
    Description: Who can reach this deployment's endpoints. Private access requires AWS managed containers and cannot change after setup.
    Default: internet
    AllowedValues:
    - internet
    - private
  UpdatesMode:
    Type: String
    Description: How updates are applied after setup registration.
    Default: auto
    AllowedValues:
    - auto
    - approval-required
  TelemetryMode:
    Type: String
    Description: Telemetry collection behavior.
    Default: auto
    AllowedValues:
    - auto
  HeartbeatsMode:
    Type: String
    Description: Heartbeat health-check behavior.
    Default: "on"
    AllowedValues:
    - "off"
    - "on"
Conditions:
  NetworkModeCreate:
    Fn::Equals:
    - Ref: NetworkMode
    - create-new
  NetworkModeUseExisting:
    Fn::Equals:
    - Ref: NetworkMode
    - use-existing
  HasVpcCidr:
    Fn::Not:
    - Fn::Equals:
      - Ref: VpcCidr
      - ''
Resources:
  LogsBucket:
    Type: AWS::S3::Bucket
    Properties:
      BucketName:
        Fn::Sub: ${AWS::StackName}-logs-bucket
Outputs:
  DeploymentSourceKind:
    Value: cloudformation
    Description: Setup source kind.
  DeploymentResourcePrefix:
    Value:
      Ref: AWS::StackName
    Description: Stable physical resource prefix.
  DeploymentPlatform:
    Value: aws
    Description: Target platform.
  DeploymentRegion:
    Value:
      Ref: AWS::Region
    Description: AWS region.
  DeploymentSetupTarget:
    Value: aws
    Description: Setup target.
  DeploymentSetupFingerprint:
    Value: test
    Description: Setup compatibility fingerprint.
  DeploymentSetupImportFormatVersion:
    Value: 1
    Description: Setup registration payload format version.
  DeploymentSetupFingerprintVersion:
    Value: 1
    Description: Setup fingerprint algorithm version.
  DeploymentManagementConfig:
    Value:
      Fn::ToJsonString:
        platform: aws
        managingRoleArn:
          Ref: ManagingRoleArn
    Description: Deployment registration management configuration JSON.
  DeploymentStackSettings:
    Value:
      Fn::ToJsonString:
        deploymentModel: push
        endpointAccess:
          Ref: EndpointAccess
        updates:
          Ref: UpdatesMode
        telemetry:
          Ref: TelemetryMode
        heartbeats:
          Ref: HeartbeatsMode
        network:
          Fn::If:
          - NetworkModeCreate
          - type: create
            cidr:
              Fn::If:
              - HasVpcCidr
              - Ref: VpcCidr
              - Ref: AWS::NoValue
            availability_zones:
              Ref: AvailabilityZones
          - Fn::If:
            - NetworkModeUseExisting
            - type: byo-vpc-aws
              vpc_id:
                Ref: VpcId
              public_subnet_ids:
                Ref: PublicSubnetIds
              private_subnet_ids:
                Ref: PrivateSubnetIds
              security_group_ids:
                Ref: SecurityGroupIds
            - type: use-default
    Description: Deployment registration settings JSON.
  DeploymentResources:
    Value:
      Fn::ToJsonString:
      - id: logs-bucket
        type: sample-resource
        importData:
          bucketName:
            Ref: LogsBucket
          bucketArn:
            Fn::GetAtt:
            - LogsBucket
            - Arn
    Description: Deployment registration resources JSON.
