crates/alien-cloudformation/tests/generator/snapshots/generator__generator__network_tests__network_create_three_az.snap
---
source: crates/alien-cloudformation/tests/generator/network_tests.rs
expression: yaml
---
AWSTemplateFormatVersion: 2010-09-09
Description: create network 3 az
Transform:
- AWS::LanguageExtensions
Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
    - Label:
        default: Registration
      Parameters:
      - ManagingRoleArn
      - ManagingAccountId
    - Label:
        default: Network
      Parameters:
      - NetworkMode
      - VpcCidr
      - AvailabilityZones
      - VpcId
      - PublicSubnetIds
      - PrivateSubnetIds
      - SecurityGroupIds
    - Label:
        default: Operations
      Parameters:
      - UpdatesMode
      - TelemetryMode
      - HeartbeatsMode
    ParameterLabels:
      AvailabilityZones:
        default: Availability zones
      HeartbeatsMode:
        default: Heartbeats
      ManagingAccountId:
        default: Image account ID
      ManagingRoleArn:
        default: Management role ARN
      NetworkMode:
        default: Network
      PrivateSubnetIds:
        default: Private subnet IDs
      PublicSubnetIds:
        default: Public subnet IDs
      SecurityGroupIds:
        default: Security group IDs
      TelemetryMode:
        default: Telemetry
      UpdatesMode:
        default: Updates
      VpcCidr:
        default: VPC CIDR
      VpcId:
        default: VPC ID
Parameters:
  ManagingRoleArn:
    Type: String
    Description: ARN of the management identity allowed to assume setup-created roles.
    Default: ''
  ManagingAccountId:
    Type: String
    Description: AWS account ID for the management account that hosts application container images.
    Default: ''
  NetworkMode:
    Type: String
    Description: Choose create-new for a managed VPC, use-existing for your VPC, or use-default for the account default VPC.
    Default: create-new
    AllowedValues:
    - create-new
    - use-existing
    - use-default
  VpcCidr:
    Type: String
    Description: Only used with create-new. CIDR for the new VPC; leave unset for the generated default.
    Default: 10.42.0.0/16
  AvailabilityZones:
    Type: Number
    Description: Only used with create-new. Number of availability zones for the new VPC.
    Default: 3
    AllowedValues:
    - 1
    - 2
    - 3
  VpcId:
    Type: String
    Description: Only used with use-existing. Existing VPC ID.
    Default: ''
  PublicSubnetIds:
    Type: CommaDelimitedList
    Description: Only used with use-existing. Existing public subnet IDs.
    Default: ''
  PrivateSubnetIds:
    Type: CommaDelimitedList
    Description: Only used with use-existing. Existing private subnet IDs.
    Default: ''
  SecurityGroupIds:
    Type: CommaDelimitedList
    Description: Only used with use-existing. Existing security group IDs.
    Default: ''
  EndpointAccess:
    Type: String
    Description: Who can reach this deployment's endpoints. Private access requires AWS managed containers and cannot change after setup.
    Default: internet
    AllowedValues:
    - internet
    - private
  UpdatesMode:
    Type: String
    Description: How updates are applied after setup registration.
    Default: approval-required
    AllowedValues:
    - auto
    - approval-required
  TelemetryMode:
    Type: String
    Description: Telemetry collection behavior.
    Default: "off"
    AllowedValues:
    - "off"
  HeartbeatsMode:
    Type: String
    Description: Heartbeat health-check behavior.
    Default: "off"
    AllowedValues:
    - "off"
    - "on"
Conditions:
  NetworkModeCreate:
    Fn::Equals:
    - Ref: NetworkMode
    - create-new
  NetworkModeUseExisting:
    Fn::Equals:
    - Ref: NetworkMode
    - use-existing
  NetworkUseAz2:
    Fn::Not:
    - Fn::Equals:
      - Ref: AvailabilityZones
      - 1
  NetworkUseAz3:
    Fn::Equals:
    - Ref: AvailabilityZones
    - 3
  NetworkCreateUseAz2:
    Fn::And:
    - Fn::Equals:
      - Ref: NetworkMode
      - create-new
    - Condition: NetworkUseAz2
  NetworkCreateUseAz3:
    Fn::And:
    - Fn::Equals:
      - Ref: NetworkMode
      - create-new
    - Condition: NetworkUseAz3
  HasVpcCidr:
    Fn::Not:
    - Fn::Equals:
      - Ref: VpcCidr
      - ''
Resources:
  DefaultNetworkVpc:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock:
        Fn::If:
        - HasVpcCidr
        - Ref: VpcCidr
        - 10.42.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
      - Key: managed-by
        Value: setup
      - Key: deployment
        Value:
          Ref: AWS::StackName
      - Key: resource
        Value: default-network
      - Key: resource-type
        Value: network
    Condition: NetworkModeCreate
  DefaultNetworkInternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
      - Key: managed-by
        Value: setup
      - Key: deployment
        Value:
          Ref: AWS::StackName
      - Key: resource
        Value: default-network
      - Key: resource-type
        Value: network
    Condition: NetworkModeCreate
  DefaultNetworkVpcGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: DefaultNetworkVpc
      InternetGatewayId:
        Ref: DefaultNetworkInternetGateway
    Condition: NetworkModeCreate
  DefaultNetworkPublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: DefaultNetworkVpc
      AvailabilityZone:
        Fn::Select:
        - 0
        - Fn::GetAZs:
            Ref: AWS::Region
      CidrBlock:
        Fn::Select:
        - 0
        - Fn::Cidr:
          - Fn::GetAtt:
            - DefaultNetworkVpc
            - CidrBlock
          - 6
          - 8
      MapPublicIpOnLaunch: true
      Tags:
      - Key: managed-by
        Value: setup
      - Key: deployment
        Value:
          Ref: AWS::StackName
      - Key: resource
        Value: default-network
      - Key: resource-type
        Value: network
    Condition: NetworkModeCreate
  DefaultNetworkPrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: DefaultNetworkVpc
      AvailabilityZone:
        Fn::Select:
        - 0
        - Fn::GetAZs:
            Ref: AWS::Region
      CidrBlock:
        Fn::Select:
        - 3
        - Fn::Cidr:
          - Fn::GetAtt:
            - DefaultNetworkVpc
            - CidrBlock
          - 6
          - 8
      Tags:
      - Key: managed-by
        Value: setup
      - Key: deployment
        Value:
          Ref: AWS::StackName
      - Key: resource
        Value: default-network
      - Key: resource-type
        Value: network
    Condition: NetworkModeCreate
  DefaultNetworkPublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: DefaultNetworkVpc
      AvailabilityZone:
        Fn::Select:
        - 1
        - Fn::GetAZs:
            Ref: AWS::Region
      CidrBlock:
        Fn::Select:
        - 1
        - Fn::Cidr:
          - Fn::GetAtt:
            - DefaultNetworkVpc
            - CidrBlock
          - 6
          - 8
      MapPublicIpOnLaunch: true
      Tags:
      - Key: managed-by
        Value: setup
      - Key: deployment
        Value:
          Ref: AWS::StackName
      - Key: resource
        Value: default-network
      - Key: resource-type
        Value: network
    Condition: NetworkCreateUseAz2
  DefaultNetworkPrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: DefaultNetworkVpc
      AvailabilityZone:
        Fn::Select:
        - 1
        - Fn::GetAZs:
            Ref: AWS::Region
      CidrBlock:
        Fn::Select:
        - 4
        - Fn::Cidr:
          - Fn::GetAtt:
            - DefaultNetworkVpc
            - CidrBlock
          - 6
          - 8
      Tags:
      - Key: managed-by
        Value: setup
      - Key: deployment
        Value:
          Ref: AWS::StackName
      - Key: resource
        Value: default-network
      - Key: resource-type
        Value: network
    Condition: NetworkCreateUseAz2
  DefaultNetworkPublicSubnet3:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: DefaultNetworkVpc
      AvailabilityZone:
        Fn::Select:
        - 2
        - Fn::GetAZs:
            Ref: AWS::Region
      CidrBlock:
        Fn::Select:
        - 2
        - Fn::Cidr:
          - Fn::GetAtt:
            - DefaultNetworkVpc
            - CidrBlock
          - 6
          - 8
      MapPublicIpOnLaunch: true
      Tags:
      - Key: managed-by
        Value: setup
      - Key: deployment
        Value:
          Ref: AWS::StackName
      - Key: resource
        Value: default-network
      - Key: resource-type
        Value: network
    Condition: NetworkCreateUseAz3
  DefaultNetworkPrivateSubnet3:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: DefaultNetworkVpc
      AvailabilityZone:
        Fn::Select:
        - 2
        - Fn::GetAZs:
            Ref: AWS::Region
      CidrBlock:
        Fn::Select:
        - 5
        - Fn::Cidr:
          - Fn::GetAtt:
            - DefaultNetworkVpc
            - CidrBlock
          - 6
          - 8
      Tags:
      - Key: managed-by
        Value: setup
      - Key: deployment
        Value:
          Ref: AWS::StackName
      - Key: resource
        Value: default-network
      - Key: resource-type
        Value: network
    Condition: NetworkCreateUseAz3
  DefaultNetworkPublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: DefaultNetworkVpc
      Tags:
      - Key: managed-by
        Value: setup
      - Key: deployment
        Value:
          Ref: AWS::StackName
      - Key: resource
        Value: default-network
      - Key: resource-type
        Value: network
    Condition: NetworkModeCreate
  DefaultNetworkPublicDefaultRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: DefaultNetworkPublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: DefaultNetworkInternetGateway
    DependsOn:
    - DefaultNetworkVpcGatewayAttachment
    Condition: NetworkModeCreate
  DefaultNetworkPrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: DefaultNetworkVpc
      Tags:
      - Key: managed-by
        Value: setup
      - Key: deployment
        Value:
          Ref: AWS::StackName
      - Key: resource
        Value: default-network
      - Key: resource-type
        Value: network
    Condition: NetworkModeCreate
  DefaultNetworkNatEip:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
    Condition: NetworkModeCreate
  DefaultNetworkNatGateway:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId:
        Fn::GetAtt:
        - DefaultNetworkNatEip
        - AllocationId
      SubnetId:
        Ref: DefaultNetworkPublicSubnet1
      Tags:
      - Key: managed-by
        Value: setup
      - Key: deployment
        Value:
          Ref: AWS::StackName
      - Key: resource
        Value: default-network
      - Key: resource-type
        Value: network
    Condition: NetworkModeCreate
  DefaultNetworkPrivateDefaultRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: DefaultNetworkPrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: DefaultNetworkNatGateway
    DependsOn:
    - DefaultNetworkNatGateway
    Condition: NetworkModeCreate
  DefaultNetworkPublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: DefaultNetworkPublicSubnet1
      RouteTableId:
        Ref: DefaultNetworkPublicRouteTable
    Condition: NetworkModeCreate
  DefaultNetworkPrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: DefaultNetworkPrivateSubnet1
      RouteTableId:
        Ref: DefaultNetworkPrivateRouteTable
    Condition: NetworkModeCreate
  DefaultNetworkPublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: DefaultNetworkPublicSubnet2
      RouteTableId:
        Ref: DefaultNetworkPublicRouteTable
    Condition: NetworkCreateUseAz2
  DefaultNetworkPrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: DefaultNetworkPrivateSubnet2
      RouteTableId:
        Ref: DefaultNetworkPrivateRouteTable
    Condition: NetworkCreateUseAz2
  DefaultNetworkPublicSubnet3RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: DefaultNetworkPublicSubnet3
      RouteTableId:
        Ref: DefaultNetworkPublicRouteTable
    Condition: NetworkCreateUseAz3
  DefaultNetworkPrivateSubnet3RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: DefaultNetworkPrivateSubnet3
      RouteTableId:
        Ref: DefaultNetworkPrivateRouteTable
    Condition: NetworkCreateUseAz3
  DefaultNetworkSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Private workload security group
      VpcId:
        Ref: DefaultNetworkVpc
      SecurityGroupEgress:
      - IpProtocol: '-1'
        CidrIp: 0.0.0.0/0
      Tags:
      - Key: managed-by
        Value: setup
      - Key: deployment
        Value:
          Ref: AWS::StackName
      - Key: resource
        Value: default-network
      - Key: resource-type
        Value: network
    Condition: NetworkModeCreate
Outputs:
  DeploymentSourceKind:
    Value: cloudformation
    Description: Setup source kind.
  DeploymentResourcePrefix:
    Value:
      Ref: AWS::StackName
    Description: Stable physical resource prefix.
  DeploymentPlatform:
    Value: aws
    Description: Target platform.
  DeploymentRegion:
    Value:
      Ref: AWS::Region
    Description: AWS region.
  DeploymentSetupTarget:
    Value: aws
    Description: Setup target.
  DeploymentSetupFingerprint:
    Value: test
    Description: Setup compatibility fingerprint.
  DeploymentSetupImportFormatVersion:
    Value: 1
    Description: Setup registration payload format version.
  DeploymentSetupFingerprintVersion:
    Value: 1
    Description: Setup fingerprint algorithm version.
  DeploymentManagementConfig:
    Value:
      Fn::ToJsonString:
        platform: aws
        managingRoleArn:
          Ref: ManagingRoleArn
    Description: Deployment registration management configuration JSON.
  DeploymentStackSettings:
    Value:
      Fn::ToJsonString:
        deploymentModel: push
        endpointAccess:
          Ref: EndpointAccess
        updates:
          Ref: UpdatesMode
        telemetry:
          Ref: TelemetryMode
        heartbeats:
          Ref: HeartbeatsMode
        network:
          Fn::If:
          - NetworkModeCreate
          - type: create
            cidr:
              Fn::If:
              - HasVpcCidr
              - Ref: VpcCidr
              - Ref: AWS::NoValue
            availability_zones:
              Ref: AvailabilityZones
          - Fn::If:
            - NetworkModeUseExisting
            - type: byo-vpc-aws
              vpc_id:
                Ref: VpcId
              public_subnet_ids:
                Ref: PublicSubnetIds
              private_subnet_ids:
                Ref: PrivateSubnetIds
              security_group_ids:
                Ref: SecurityGroupIds
            - type: use-default
    Description: Deployment registration settings JSON.
  DeploymentResources:
    Value:
      Fn::ToJsonString:
      - id: default-network
        type: network
        importData:
          Fn::If:
          - NetworkModeCreate
          - vpcId:
              Ref: DefaultNetworkVpc
            cidrBlock:
              Fn::GetAtt:
              - DefaultNetworkVpc
              - CidrBlock
            internetGatewayId:
              Ref: DefaultNetworkInternetGateway
            natGatewayId:
              Ref: DefaultNetworkNatGateway
            eipAllocationId:
              Fn::GetAtt:
              - DefaultNetworkNatEip
              - AllocationId
            publicSubnetIds:
            - Ref: DefaultNetworkPublicSubnet1
            - Fn::If:
              - NetworkCreateUseAz2
              - Ref: DefaultNetworkPublicSubnet2
              - Ref: AWS::NoValue
            - Fn::If:
              - NetworkCreateUseAz3
              - Ref: DefaultNetworkPublicSubnet3
              - Ref: AWS::NoValue
            privateSubnetIds:
            - Ref: DefaultNetworkPrivateSubnet1
            - Fn::If:
              - NetworkCreateUseAz2
              - Ref: DefaultNetworkPrivateSubnet2
              - Ref: AWS::NoValue
            - Fn::If:
              - NetworkCreateUseAz3
              - Ref: DefaultNetworkPrivateSubnet3
              - Ref: AWS::NoValue
            publicRouteTableId:
              Ref: DefaultNetworkPublicRouteTable
            privateRouteTableId:
              Ref: DefaultNetworkPrivateRouteTable
            securityGroupId:
              Fn::GetAtt:
              - DefaultNetworkSecurityGroup
              - GroupId
            availabilityZones:
            - Fn::Select:
              - 0
              - Fn::GetAZs:
                  Ref: AWS::Region
            - Fn::If:
              - NetworkUseAz2
              - Fn::Select:
                - 1
                - Fn::GetAZs:
                    Ref: AWS::Region
              - Ref: AWS::NoValue
            - Fn::If:
              - NetworkUseAz3
              - Fn::Select:
                - 2
                - Fn::GetAZs:
                    Ref: AWS::Region
              - Ref: AWS::NoValue
            isByoVpc: false
          - Fn::If:
            - NetworkModeUseExisting
            - vpcId:
                Ref: VpcId
              publicSubnetIds:
                Ref: PublicSubnetIds
              privateSubnetIds:
                Ref: PrivateSubnetIds
              securityGroupId:
                Fn::Select:
                - 0
                - Ref: SecurityGroupIds
              availabilityZones: []
              isByoVpc: true
            - publicSubnetIds: []
              privateSubnetIds: []
              availabilityZones: []
              isByoVpc: true
    Description: Deployment registration resources JSON.
